// Copyright Â© Spelldawn 2021-present

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//    https://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sd;
option csharp_namespace = "Spelldawn.Protos";

import "game_primitives.proto";
import "google/protobuf/any.proto";

message DebugPerformCommandsAction {
  /** Secretly CommandList, but recursive imports... */
  google.protobuf.Any command_list = 1;
}

/**
 * Spend an action to gain 1 mana.
 *
 * Optimistic: Mana is added immediately.
 */
 message GainManaAction {
}

/**
 * Spend an action to draw a card.
 *
 * Optimistic: Face-down card animates to reveal area.
 */
message DrawCardAction {
}

/**
 * Spend an action to place a level counter on a room.
 *
 * Optimistic: Counter is added immediately
 */
message LevelUpAction {
  RoomId room_id = 1;
}

/**
 * Spend an action to initiate a raid on one of the overlord's rooms
 *
 * Optimistic: Raid start animation plays
 */
message RaidAction {
  RoomId room_id = 1;
}

/**
 * Spend an action to play a card from hand.
 *
 * Optimistic:
 *   - Mana and action cost is spent immediately, and 'can play' values for
 *     other cards in hand are optimistically updated
 *   - Other costs like 'sacrifice an artifact' are not optimistic and are
 *     handled like choices
 *   - Targeted cards select their *first* valid target (cards, rooms, players)
 *     optimistically. If additional targets are required, they're not handled
 *     optimistically, and this play pattern should possibly be avoided.
 *   - Cards that require a choice to be made before resolving do not display
 *     the options optimistically, instead they animate to the reveal card area
 *   - Item cards which don't require a choice to be made or target simply
 *     animate into the play area optimistically
 *   - Spell cards animate to the reveal card area and wait for their effects to be
 *     applied
 *   - Minion and Project cards animate to their selected room optimistically
 */
message PlayCardAction {
  CardId card_id = 1;
  TargetId target = 2;
}

/**
 * Concede the game.
 *
 * Optimistic: Concede animation.
 */
message ConcedeAction {
}

/**
 * Possible game actions taken by the user.
 *
 * Actions have an associated 'optimistic' behavior to display while waiting
 * for a server response. The client should not send multiple actions at the
 * same time -- interaction should be disabled while an action is pending.
 */
message GameAction {
  oneof action {
    DebugPerformCommandsAction debug_action = 1;
    GainManaAction gain_mana = 2;
    DrawCardAction draw_card = 3;
    LevelUpAction level_up = 4;
    RaidAction raid = 5;
    PlayCardAction play_card = 6;
    ConcedeAction concede = 7;
  }
}